<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:id="@+id/login_page"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText android:id="@+id/login_email_address"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/email_address"
            android:autofillHints="no"
            android:inputType="textEmailAddress" />

        <EditText android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/password"
            android:autofillHints="no"
            android:inputType="textPassword" />

        <Button android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:backgroundTint="@color/blue_light"
            android:enabled="false" />

        <TextView android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/blue_dark"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_dark"
            android:layout_marginVertical="50dp" />

        <Button android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:backgroundTint="@color/green"
            android:layout_marginHorizontal="50dp" />

    </LinearLayout>

    <!-- 忘記密碼 -->
    <LinearLayout android:id="@+id/forget_password_page"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHeight_percent="0.375"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_address"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_email_description"
            android:textSize="16sp"
            android:layout_marginVertical="10dp" />

        <EditText android:id="@+id/find_email_address"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/email_address"
            android:autofillHints="no"
            android:inputType="textEmailAddress"
            android:layout_marginVertical="10dp" />

        <Button android:id="@+id/find_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_account"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:backgroundTint="@color/blue_light"
            android:enabled="false"
            android:layout_marginVertical="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>