<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:id="@+id/before_sending_verification"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/return_login_page">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_person_outline_24"
            android:background="@drawable/round_background"
            android:layout_gravity="center"
            android:padding="25dp"
            android:contentDescription="@string/signup"
            android:layout_marginVertical="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginVertical="10dp" />

        <EditText android:id="@+id/signup_email_address"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/email_address"
            android:background="@drawable/edittext_background"
            android:paddingHorizontal="10dp"
            android:autofillHints="no"
            android:inputType="textEmailAddress"
            android:layout_marginVertical="10dp" />

        <EditText android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/password"
            android:background="@drawable/edittext_background"
            android:paddingHorizontal="10dp"
            android:autofillHints="no"
            android:inputType="textPassword"
            android:layout_marginVertical="10dp" />

        <EditText android:id="@+id/signup_nickname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/nickname"
            android:background="@drawable/edittext_background"
            android:paddingHorizontal="10dp"
            android:autofillHints="no"
            android:inputType="text"
            android:layout_marginVertical="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_verification_description"
            android:textSize="12sp" />

        <Button android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:backgroundTint="@color/blue_light"
            android:layout_marginVertical="10dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_dark"
        app:layout_constraintBottom_toTopOf="@+id/return_login_page" />

    <LinearLayout android:id="@+id/return_login_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/already_have_account"
            android:gravity="end"
            android:layout_marginVertical="10dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/please_login"
            android:textColor="@color/blue_medium"
            android:gravity="start"
            android:layout_marginVertical="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>